--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -21,11 +21,11 @@ header {
   border: 1px solid #d6e4e5;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px;
   width: 100%;
-  height: 140px;
+  height: 145px;
   background-color: #eff5f5;
 }
 header .global-notification {
-  height: 40px;
+  height: 45px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -53,7 +53,7 @@ header .container .header-wrapper .header-left {
 }
 header .container .header-wrapper nav .menu {
   display: flex;
-  gap: 28px;
+  gap: 30px;
 }
 header .container .header-wrapper nav .menu a {
   color: #112b3c;
@@ -63,7 +63,20 @@ header .container .header-wrapper nav .menu a {
 }
 header .container .header-wrapper nav .menu i {
   color: #112b3c;
-  font-size: 13px;
+  font-size: 12px;
+}
+header .container .header-wrapper nav .menu .link {
+  position: relative;
+}
+header .container .header-wrapper nav .menu .link:hover::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #497174;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  transition: width 0.3s ease;
 }
 header .container .header-wrapper .header-right .left-menu {
   display: flex;
@@ -86,5 +99,5 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
   text-align: center;
   font-size: 10px;
   color: white;
-  background-color: #EB6440;
+  background-color: #eb6440;
 }/*# sourceMappingURL=main.css.map */
