--- a/assets/style/sass/layout/_header.scss
+++ b/assets/style/sass/layout/_header.scss
@@ -31,8 +31,9 @@ header {
       nav {
         .menu {
           display: flex;
-
           gap: 30px;
+          align-items: center;
+
           a {
             color: #112b3c;
             font-size: 14px;
@@ -45,7 +46,36 @@ header {
           }
           .link {
             position: relative;
-                        &:hover::after {
+            display: flex;
+            height: 100px;
+            align-items: center;
+            &:hover a,i {
+              color: #497174;
+            }
+
+            .dropdown-wrapper {
+              position: absolute;
+              top: 100%;
+              left: -20px;
+              border: 1px solid #deeffa;
+              background-color: white;
+              width: 160px;
+              height: 200px;
+              display: none;
+              .dropdown-menu {
+                .dropdown-link {
+                  margin-top: 10px;
+                  a {
+                    font-size: 12px;
+                    padding: 20px 20px;
+                  }
+                }
+              }
+            }
+            &:hover .dropdown-wrapper {
+              display: block;
+            }
+            &:hover::after {
               content: "";
               width: 100%;
               height: 2px;
@@ -54,11 +84,64 @@ header {
               // bottom: -2px;
               // left: 50%;
               // transform: translateX(-50%);
-              bottom: -2px;
+              bottom: 40px;
               left: 0;
-               transition: width 0.3s ease; 
+              transition: width 0.3s ease;
             }
 
+            .megamenu-wrapper {
+              position: absolute;
+              top: 100%;
+              border: 1px solid #d6e4e5;
+              width: 1100px;
+              left: -450px;
+              height: 450px;
+              display: flex;
+              justify-content: space-around;
+              background-color: #eff5f5;
+              
+              .mega-img {
+                margin-top: 20px;
+                padding-right: 20px;
+                font-size: 12px;
+                font-family: "Jost", sans-serif;
+                .subtitle {
+                  font-size: 16px;
+                  font-family: "Jost", sans-serif;
+                }
+                .btn {
+                  width: 150px;
+                  height: 35px;
+                  margin-top: 15px;
+                  border-radius: 5px;
+                  border: 2px solid #d6e4e5;
+                  background-color: #eff5f5;
+                  font-family: "Jost", sans-serif;
+                  font-size: 13px;
+                  &:hover {
+                    background-color: #d6e4e5;
+                  }
+                }
+              }
+
+              ul {
+                margin-top: 20px;
+
+                li {
+                  margin-top: 10px;
+                  h1 {
+                    font-size: 12px;
+                    font-family: "Jost", sans-serif;
+                    padding: 10px 10px;
+                  }
+                  a {
+                    padding: 10px 10px;
+                    font-size: 12px;
+                    font-family: "Jost", sans-serif;
+                  }
+                }
+              }
+            }
           }
         }
       }
