modal-search added

--- a/assets/style/sass/main.scss
+++ b/assets/style/sass/main.scss
@@ -1,2 +1,4 @@
 @use "./base/reset";
-@use './layout/header';
+@use "./components/dropdown";
+@use "./components/modal-search";
+@use "./layout/header";
