--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -17,6 +17,230 @@ ul {
   width: 70%;
 }
 
+.link {
+  position: relative;
+  display: flex;
+  height: 100px;
+  align-items: center;
+}
+.link:hover .dropdown-wrapper {
+  display: block;
+}
+.link:hover .megamenu-wrapper {
+  display: flex;
+}
+.link .dropdown-wrapper {
+  position: absolute;
+  top: 100%;
+  left: -20px;
+  border: 1px solid #deeffa;
+  background-color: #eff5f5;
+  width: 160px;
+  height: 200px;
+  display: none;
+}
+.link .dropdown-wrapper .dropdown-menu .dropdown-link {
+  margin-top: 10px;
+}
+.link .dropdown-wrapper .dropdown-menu .dropdown-link a {
+  font-size: 12px;
+  padding: 20px 20px;
+}
+.link .dropdown-wrapper .dropdown-menu .dropdown-link:hover a {
+  color: #497174;
+}
+.link:hover::after {
+  content: "";
+  width: 100%;
+  height: 2px;
+  background-color: #497174;
+  position: absolute;
+  bottom: 40px;
+  left: 0;
+  transition: width 0.3s ease;
+}
+.link .megamenu-wrapper {
+  position: absolute;
+  top: 100%;
+  border: 1px solid #d6e4e5;
+  width: 1100px;
+  left: -450px;
+  height: 450px;
+  display: flex;
+  justify-content: space-around;
+  background-color: #eff5f5;
+  display: none;
+}
+.link .megamenu-wrapper a:hover {
+  color: #497174;
+}
+.link .megamenu-wrapper .mega-img {
+  margin-top: 20px;
+  padding-right: 20px;
+  font-size: 12px;
+  font-family: "Jost", sans-serif;
+}
+.link .megamenu-wrapper .mega-img .subtitle {
+  font-size: 16px;
+  font-family: "Jost", sans-serif;
+}
+.link .megamenu-wrapper .mega-img .btn {
+  width: 150px;
+  height: 35px;
+  margin-top: 15px;
+  border-radius: 5px;
+  border: 2px solid #d6e4e5;
+  background-color: #eff5f5;
+  font-family: "Jost", sans-serif;
+  font-size: 13px;
+}
+.link .megamenu-wrapper .mega-img .btn:hover {
+  background-color: #d6e4e5;
+}
+.link .megamenu-wrapper ul {
+  margin-top: 20px;
+}
+.link .megamenu-wrapper ul li {
+  margin-top: 10px;
+}
+.link .megamenu-wrapper ul li h1 {
+  font-size: 12px;
+  font-family: "Jost", sans-serif;
+  padding: 10px 10px;
+}
+.link .megamenu-wrapper ul li a {
+  padding: 10px 10px;
+  font-size: 12px;
+  font-family: "Jost", sans-serif;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9;
+}
+.modal-overlay .modal-search {
+  width: 800px;
+  border: 1px solid #efefef;
+  min-height: 500px;
+  margin: auto;
+  background-color: #eff5f5;
+  border-radius: 10px;
+  margin-top: 80px;
+  position: relative;
+}
+.modal-overlay .modal-search .modal-wrapper {
+  padding: 30px 30px;
+}
+.modal-overlay .modal-search .modal-wrapper .title {
+  font-size: 35px;
+  font-family: "Jost", sans-serif;
+  color: #112b3c;
+  font-weight: 500;
+}
+.modal-overlay .modal-search .modal-wrapper .sub-title {
+  font-size: 15px;
+  font-family: "Jost", sans-serif;
+  color: #778690;
+}
+.modal-overlay .modal-search .modal-wrapper .form {
+  margin-top: 20px;
+  display: flex;
+  border-top: 2px solid #d6e4e5;
+  border-bottom: 2px solid #d6e4e5;
+  padding: 15px 0;
+}
+.modal-overlay .modal-search .modal-wrapper .form input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid #d6e4e5;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  outline: none;
+  text-indent: 10px;
+}
+.modal-overlay .modal-search .modal-wrapper .form input:focus {
+  outline: 1px solid #112b3c;
+}
+.modal-overlay .modal-search .modal-wrapper .form input::placeholder {
+  font-size: 15px;
+  font-family: "Jost", sans-serif;
+}
+.modal-overlay .modal-search .modal-wrapper .form .btn {
+  border: none;
+  width: 60px;
+  border: 1px solid #d6e4e5;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  background-color: #d6e4e5;
+  font-size: 20px;
+}
+.modal-overlay .modal-search .modal-wrapper .form .btn:hover {
+  background-color: orangered;
+}
+.modal-overlay .modal-search .modal-wrapper .result-wrapper {
+  display: grid;
+  grid-template-columns: 1fr;
+  border: 1px solid #d6e4e5;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  margin-top: 10px;
+  background-color: #d6e4e5;
+}
+.modal-overlay .modal-search .modal-wrapper .result-wrapper h1 {
+  font-size: 15px;
+  font-family: "Jost", sans-serif;
+  font-weight: 600;
+  padding: 10px 10px;
+}
+.modal-overlay .modal-search .modal-wrapper .cart {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 30px;
+}
+.modal-overlay .modal-search .modal-wrapper .cart a {
+  border: 1px solid #d6e4e5;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  font-family: "Jost", sans-serif;
+  justify-content: center;
+  gap: 10px;
+}
+.modal-overlay .modal-search .modal-wrapper .cart a img {
+  width: 70px;
+  height: 80px;
+  object-fit: contain;
+}
+.modal-overlay .modal-search .modal-wrapper .cart a .cart-detail h1 {
+  font-size: 15px;
+  color: #112b3c;
+  font-weight: 400;
+}
+.modal-overlay .modal-search .modal-wrapper .cart a .cart-detail .code {
+  color: #c7d1d4;
+  font-size: 13px;
+}
+.modal-overlay .modal-search .modal-wrapper .cart a .cart-detail .price {
+  color: orangered;
+  font-size: 13px;
+  font-weight: 600;
+}
+.modal-overlay .modal-search .modal-wrapper .cart a:hover {
+  background-color: #d6e4e5;
+}
+.modal-overlay .modal-search .modal-wrapper .circle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  font-size: 20px;
+  padding: 10px;
+}
+
 header {
   border: 1px solid #d6e4e5;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px;
@@ -68,102 +292,6 @@ header .container .header-wrapper nav .menu a:hover {
 header .container .header-wrapper nav .menu i {
   color: #112b3c;
   font-size: 12px;
-}
-header .container .header-wrapper nav .menu .link {
-  position: relative;
-  display: flex;
-  height: 100px;
-  align-items: center;
-}
-header .container .header-wrapper nav .menu .link:hover .dropdown-wrapper {
-  display: block;
-}
-header .container .header-wrapper nav .menu .link:hover .megamenu-wrapper {
-  display: flex;
-}
-header .container .header-wrapper nav .menu .link .dropdown-wrapper {
-  position: absolute;
-  top: 100%;
-  left: -20px;
-  border: 1px solid #deeffa;
-  background-color: #eff5f5;
-  width: 160px;
-  height: 200px;
-  display: none;
-}
-header .container .header-wrapper nav .menu .link .dropdown-wrapper .dropdown-menu .dropdown-link {
-  margin-top: 10px;
-}
-header .container .header-wrapper nav .menu .link .dropdown-wrapper .dropdown-menu .dropdown-link a {
-  font-size: 12px;
-  padding: 20px 20px;
-}
-header .container .header-wrapper nav .menu .link .dropdown-wrapper .dropdown-menu .dropdown-link:hover a {
-  color: #497174;
-}
-header .container .header-wrapper nav .menu .link:hover::after {
-  content: "";
-  width: 100%;
-  height: 2px;
-  background-color: #497174;
-  position: absolute;
-  bottom: 40px;
-  left: 0;
-  transition: width 0.3s ease;
-}
-header .container .header-wrapper nav .menu .link .megamenu-wrapper {
-  position: absolute;
-  top: 100%;
-  border: 1px solid #d6e4e5;
-  width: 1100px;
-  left: -450px;
-  height: 450px;
-  display: flex;
-  justify-content: space-around;
-  background-color: #eff5f5;
-  display: none;
-}
-header .container .header-wrapper nav .menu .link .megamenu-wrapper a:hover {
-  color: #497174;
-}
-header .container .header-wrapper nav .menu .link .megamenu-wrapper .mega-img {
-  margin-top: 20px;
-  padding-right: 20px;
-  font-size: 12px;
-  font-family: "Jost", sans-serif;
-}
-header .container .header-wrapper nav .menu .link .megamenu-wrapper .mega-img .subtitle {
-  font-size: 16px;
-  font-family: "Jost", sans-serif;
-}
-header .container .header-wrapper nav .menu .link .megamenu-wrapper .mega-img .btn {
-  width: 150px;
-  height: 35px;
-  margin-top: 15px;
-  border-radius: 5px;
-  border: 2px solid #d6e4e5;
-  background-color: #eff5f5;
-  font-family: "Jost", sans-serif;
-  font-size: 13px;
-}
-header .container .header-wrapper nav .menu .link .megamenu-wrapper .mega-img .btn:hover {
-  background-color: #d6e4e5;
-}
-header .container .header-wrapper nav .menu .link .megamenu-wrapper ul {
-  margin-top: 20px;
-}
-header .container .header-wrapper nav .menu .link .megamenu-wrapper ul li {
-  margin-top: 10px;
-}
-header .container .header-wrapper nav .menu .link .megamenu-wrapper ul li h1 {
-  font-size: 12px;
-  font-family: "Jost", sans-serif;
-  padding: 10px 10px;
-}
-header .container .header-wrapper nav .menu .link .megamenu-wrapper ul li a {
-  padding: 10px 10px;
-  font-size: 12px;
-  font-family: "Jost", sans-serif;
 }
 header .container .header-wrapper .header-right .left-menu {
   display: flex;
