--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -17,19 +17,30 @@ ul {
   width: 70%;
 }
 
-.link {
+nav .menu {
+  display: flex;
+  gap: 30px;
+  align-items: center;
+}
+nav .menu .link {
   position: relative;
   display: flex;
   height: 100px;
   align-items: center;
 }
-.link:hover .dropdown-wrapper {
+nav .menu .link:hover .dropdown-wrapper {
   display: block;
 }
-.link:hover .megamenu-wrapper {
+nav .menu .link:hover .megamenu-wrapper {
   display: flex;
 }
-.link .dropdown-wrapper {
+nav .menu .link:hover i {
+  color: #497174;
+}
+nav .menu .link:hover .main-menu {
+  color: #497174;
+}
+nav .menu .link .dropdown-wrapper {
   position: absolute;
   top: 100%;
   left: -20px;
@@ -39,17 +50,17 @@ ul {
   height: 200px;
   display: none;
 }
-.link .dropdown-wrapper .dropdown-menu .dropdown-link {
+nav .menu .link .dropdown-wrapper .dropdown-menu .dropdown-link {
   margin-top: 10px;
 }
-.link .dropdown-wrapper .dropdown-menu .dropdown-link a {
+nav .menu .link .dropdown-wrapper .dropdown-menu .dropdown-link a {
   font-size: 12px;
   padding: 20px 20px;
 }
-.link .dropdown-wrapper .dropdown-menu .dropdown-link:hover a {
+nav .menu .link .dropdown-wrapper .dropdown-menu .dropdown-link:hover a {
   color: #497174;
 }
-.link:hover::after {
+nav .menu .link:hover::after {
   content: "";
   width: 100%;
   height: 2px;
@@ -57,9 +68,9 @@ ul {
   position: absolute;
   bottom: 40px;
   left: 0;
-  transition: width 0.3s ease;
+  transition: width 0.5s ease;
 }
-.link .megamenu-wrapper {
+nav .menu .link .megamenu-wrapper {
   position: absolute;
   top: 100%;
   border: 1px solid #d6e4e5;
@@ -71,20 +82,20 @@ ul {
   background-color: #eff5f5;
   display: none;
 }
-.link .megamenu-wrapper a:hover {
+nav .menu .link .megamenu-wrapper a:hover {
   color: #497174;
 }
-.link .megamenu-wrapper .mega-img {
+nav .menu .link .megamenu-wrapper .mega-img {
   margin-top: 20px;
   padding-right: 20px;
   font-size: 12px;
   font-family: "Jost", sans-serif;
 }
-.link .megamenu-wrapper .mega-img .subtitle {
+nav .menu .link .megamenu-wrapper .mega-img .subtitle {
   font-size: 16px;
   font-family: "Jost", sans-serif;
 }
-.link .megamenu-wrapper .mega-img .btn {
+nav .menu .link .megamenu-wrapper .mega-img .btn {
   width: 150px;
   height: 35px;
   margin-top: 15px;
@@ -94,26 +105,44 @@ ul {
   font-family: "Jost", sans-serif;
   font-size: 13px;
 }
-.link .megamenu-wrapper .mega-img .btn:hover {
+nav .menu .link .megamenu-wrapper .mega-img .btn:hover {
   background-color: #d6e4e5;
 }
-.link .megamenu-wrapper ul {
+nav .menu .link .megamenu-wrapper ul {
   margin-top: 20px;
 }
-.link .megamenu-wrapper ul li {
+nav .menu .link .megamenu-wrapper ul li {
   margin-top: 10px;
 }
-.link .megamenu-wrapper ul li h1 {
+nav .menu .link .megamenu-wrapper ul li h1 {
   font-size: 12px;
   font-family: "Jost", sans-serif;
   padding: 10px 10px;
 }
-.link .megamenu-wrapper ul li a {
+nav .menu .link .megamenu-wrapper ul li a {
   padding: 10px 10px;
   font-size: 12px;
   font-family: "Jost", sans-serif;
+}
+nav .menu a {
+  color: #112b3c;
+  font-size: 14px;
+  font-family: "Jost", sans-serif;
+  font-weight: 500;
+}
+nav .menu a:hover {
+  color: #497174;
+}
+nav .menu i {
+  color: #112b3c;
+  font-size: 12px;
 }
 
+@media only screen and (max-width: 992px) {
+  nav .menu {
+    display: none;
+  }
+}
 .modal-overlay {
   position: fixed;
   top: 0;
@@ -122,6 +151,7 @@ ul {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 9;
+  display: none;
 }
 .modal-overlay .modal-search {
   width: 800px;
@@ -252,11 +282,11 @@ header .global-notification {
   height: 45px;
   display: flex;
   align-items: center;
-  justify-content: center;
   font-size: 12px;
   font-family: "Jost", sans-serif;
   background-color: #497174;
   color: white;
+  text-align: center;
 }
 header .global-notification a {
   color: white;
@@ -274,24 +304,6 @@ header .container .header-wrapper .header-left {
   font-family: "Jost", sans-serif;
   font-weight: 600;
   color: #112b3c;
-}
-header .container .header-wrapper nav .menu {
-  display: flex;
-  gap: 30px;
-  align-items: center;
-}
-header .container .header-wrapper nav .menu a {
-  color: #112b3c;
-  font-size: 14px;
-  font-family: "Jost", sans-serif;
-  font-weight: 500;
-}
-header .container .header-wrapper nav .menu a:hover {
-  color: #497174;
-}
-header .container .header-wrapper nav .menu i {
-  color: #112b3c;
-  font-size: 12px;
 }
 header .container .header-wrapper .header-right .left-menu {
   display: flex;
