--- a/assets/style/sass/components/_dropdown.scss
+++ b/assets/style/sass/components/_dropdown.scss
@@ -1,114 +1,145 @@
-.link {
-  position: relative;
-  display: flex;
-  height: 100px;
-  align-items: center;
-  &:hover .dropdown-wrapper {
-    display: block;
-  }
-
-  &:hover .megamenu-wrapper {
+nav {
+  .menu {
     display: flex;
-  }
-  // &:hover a,
-  // i {
-  //   color: #497174;
-  // }
+    gap: 30px;
+    align-items: center;
+    .link {
+      position: relative;
+      display: flex;
+      height: 100px;
+      align-items: center;
+      &:hover .dropdown-wrapper {
+        display: block;
+      }
 
-  .dropdown-wrapper {
-    position: absolute;
-    top: 100%;
-    left: -20px;
-    border: 1px solid #deeffa;
-    background-color: #eff5f5;
-    width: 160px;
-    height: 200px;
-    display: none;
+      &:hover .megamenu-wrapper {
+        display: flex;
+      }
+      &:hover i {
+        color: #497174;
+      }
+      &:hover .main-menu {
+        color: #497174;
+      }
 
-    .dropdown-menu {
-      .dropdown-link {
-        margin-top: 10px;
-        a {
-          font-size: 12px;
-          padding: 20px 20px;
+      .dropdown-wrapper {
+        position: absolute;
+        top: 100%;
+        left: -20px;
+        border: 1px solid #deeffa;
+        background-color: #eff5f5;
+        width: 160px;
+        height: 200px;
+        display: none;
+
+        .dropdown-menu {
+          .dropdown-link {
+            margin-top: 10px;
+            a {
+              font-size: 12px;
+              padding: 20px 20px;
+            }
+            &:hover a {
+              color: #497174;
+            }
+          }
         }
-        &:hover a {
-          color: #497174;
+      }
+
+      &:hover::after {
+        content: "";
+        width: 100%;
+        height: 2px;
+        background-color: #497174;
+        position: absolute;
+        // bottom: -2px;
+        // left: 50%;
+        // transform: translateX(-50%);
+        bottom: 40px;
+        left: 0;
+        transition: width 0.5s ease;
+      }
+
+      .megamenu-wrapper {
+        position: absolute;
+        top: 100%;
+        border: 1px solid #d6e4e5;
+        width: 1100px;
+        left: -450px;
+        height: 450px;
+        display: flex;
+        justify-content: space-around;
+        background-color: #eff5f5;
+        display: none;
+        a {
+          &:hover {
+            color: #497174;
+          }
+        }
+        .mega-img {
+          margin-top: 20px;
+          padding-right: 20px;
+          font-size: 12px;
+          font-family: "Jost", sans-serif;
+          .subtitle {
+            font-size: 16px;
+            font-family: "Jost", sans-serif;
+          }
+          .btn {
+            width: 150px;
+            height: 35px;
+            margin-top: 15px;
+            border-radius: 5px;
+            border: 2px solid #d6e4e5;
+            background-color: #eff5f5;
+            font-family: "Jost", sans-serif;
+            font-size: 13px;
+            &:hover {
+              background-color: #d6e4e5;
+            }
+          }
+        }
+
+        ul {
+          margin-top: 20px;
+
+          li {
+            margin-top: 10px;
+            h1 {
+              font-size: 12px;
+              font-family: "Jost", sans-serif;
+              padding: 10px 10px;
+            }
+            a {
+              padding: 10px 10px;
+              font-size: 12px;
+              font-family: "Jost", sans-serif;
+            }
+          }
         }
       }
     }
-  }
 
-  &:hover::after {
-    content: "";
-    width: 100%;
-    height: 2px;
-    background-color: #497174;
-    position: absolute;
-    // bottom: -2px;
-    // left: 50%;
-    // transform: translateX(-50%);
-    bottom: 40px;
-    left: 0;
-    transition: width 0.3s ease;
-  }
-
-  .megamenu-wrapper {
-    position: absolute;
-    top: 100%;
-    border: 1px solid #d6e4e5;
-    width: 1100px;
-    left: -450px;
-    height: 450px;
-    display: flex;
-    justify-content: space-around;
-    background-color: #eff5f5;
-    display: none;
     a {
+      color: #112b3c;
+      font-size: 14px;
+      font-family: "Jost", sans-serif;
+      font-weight: 500;
       &:hover {
         color: #497174;
       }
     }
-    .mega-img {
-      margin-top: 20px;
-      padding-right: 20px;
+    i {
+      color: #112b3c;
       font-size: 12px;
-      font-family: "Jost", sans-serif;
-      .subtitle {
-        font-size: 16px;
-        font-family: "Jost", sans-serif;
-      }
-      .btn {
-        width: 150px;
-        height: 35px;
-        margin-top: 15px;
-        border-radius: 5px;
-        border: 2px solid #d6e4e5;
-        background-color: #eff5f5;
-        font-family: "Jost", sans-serif;
-        font-size: 13px;
-        &:hover {
-          background-color: #d6e4e5;
-        }
-      }
     }
+  }
+}
 
-    ul {
-      margin-top: 20px;
-
-      li {
-        margin-top: 10px;
-        h1 {
-          font-size: 12px;
-          font-family: "Jost", sans-serif;
-          padding: 10px 10px;
-        }
-        a {
-          padding: 10px 10px;
-          font-size: 12px;
-          font-family: "Jost", sans-serif;
-        }
-      }
+@media only screen and (max-width: 992px) {
+  nav {
+    .menu {
+      display: none;
     }
   }
 }
