--- a/assets/style/sass/main.scss
+++ b/assets/style/sass/main.scss
@@ -1,4 +1,6 @@
 @use "./base/reset";
+@use "./components/buttons";
 @use "./components/dropdown";
 @use "./components/modal-search";
+@use "./components/slider";
 @use "./layout/header";
