--- a/assets/style/css/main.css
+++ b/assets/style/css/main.css
@@ -14,7 +14,7 @@ ul {
 
 .container {
   margin: auto;
-  width: 70%;
+  width: 1200px;
 }
 
 h1, h2, h3, h4, p {
@@ -32,6 +32,36 @@ h1, h2, h3, h4, p {
   color: white;
 }
 
+.categories {
+  width: 100%;
+  border: 1px solid black;
+  display: grid;
+  grid-template-columns: repeat(6, 1fr);
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.categories .categorie-item {
+  border: 1px solid black;
+  height: 170px;
+  width: 140px;
+}
+
+@media only screen and (max-width: 992px) {
+  .categories {
+    grid-template-columns: repeat(6, 1fr);
+  }
+}
+@media only screen and (max-width: 768px) {
+  .categories {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+@media only screen and (max-width: 320px) {
+  .categories {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
 nav .menu {
   display: flex;
   gap: 30px;
@@ -288,12 +318,12 @@ nav .menu i {
   padding: 10px;
 }
 
-.section1 {
+.slider {
   width: 100%;
   position: relative;
   z-index: 1;
 }
-.section1 .slider .slider-wrapper .slider-buttons {
+.slider .slider-wrapper .slider-buttons {
   width: 100%;
   position: absolute;
   top: 0;
@@ -303,7 +333,7 @@ nav .menu i {
   height: 100%;
   padding: 0 30px;
 }
-.section1 .slider .slider-wrapper .slider-buttons .chevron {
+.slider .slider-wrapper .slider-buttons .chevron {
   width: 50px;
   height: 50px;
   font-size: 30px;
@@ -312,13 +342,13 @@ nav .menu i {
   opacity: 0.4;
   cursor: pointer;
 }
-.section1 .slider .slider-wrapper .slider-buttons .chevron:hover {
+.slider .slider-wrapper .slider-buttons .chevron:hover {
   opacity: 1;
   background-color: #497174;
   transition: background-color 0.3s;
   color: white;
 }
-.section1 .slider .slider-wrapper .slider-dots {
+.slider .slider-wrapper .slider-dots {
   width: 100%;
   display: flex;
   position: absolute;
@@ -326,7 +356,7 @@ nav .menu i {
   justify-content: center;
   gap: 10px;
 }
-.section1 .slider .slider-wrapper .slider-dots .dot {
+.slider .slider-wrapper .slider-dots .dot {
   align-items: end;
   width: 13px;
   height: 13px;
@@ -335,24 +365,24 @@ nav .menu i {
   opacity: 1;
   cursor: pointer;
 }
-.section1 .slider .slider-wrapper .slider-dots .dot:hover {
+.slider .slider-wrapper .slider-dots .dot:hover {
   opacity: 0.5;
 }
-.section1 .slider .slider-wrapper .slider-item .container {
+.slider .slider-wrapper .slider-item .container {
   display: flex;
   justify-content: center;
   flex-direction: column;
   height: calc(100vh - 145px);
   font-family: "Jost", sans-serif;
 }
-.section1 .slider .slider-wrapper .slider-item .container .subtitle {
+.slider .slider-wrapper .slider-item .container .subtitle {
   font-size: 18px;
 }
-.section1 .slider .slider-wrapper .slider-item .container h1 {
+.slider .slider-wrapper .slider-item .container h1 {
   font-size: 60px;
   font-weight: 400;
 }
-.section1 .slider .slider-wrapper .slider-item .slider-img img {
+.slider .slider-wrapper .slider-item .slider-img img {
   position: absolute;
   top: 0;
   width: 100%;
@@ -402,6 +432,7 @@ header .container .header-wrapper .header-left {
 header .container .header-wrapper .header-right .left-menu {
   display: flex;
   gap: 20px;
+  margin-right: 15px;
 }
 header .container .header-wrapper .header-right .left-menu i {
   font-size: 18px;
@@ -432,4 +463,56 @@ header .container .header-wrapper .header-right .left-menu .cart .count {
   .global-notification .container {
     font-size: 10px;
   }
+}
+@media only screen and (max-width: 1200px) {
+  .container {
+    max-width: 992px;
+  }
+}
+@media only screen and (max-width: 992px) {
+  .container {
+    max-width: 768px;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .container {
+    max-width: 576px;
+  }
+}
+@media only screen and (max-width: 576px) {
+  .container {
+    max-width: 460px;
+  }
+}
+@media only screen and (max-width: 460px) {
+  .container {
+    max-width: 400px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .container {
+    max-width: 310px;
+  }
+}
+.category {
+  width: 100%;
+  background-color: #EFF5F5;
+}
+.category .container {
+  border: 1px solid black;
+}
+.category .container .category-wrapper {
+  min-height: 300px;
+}
+.category .container .category-wrapper .category-title {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  padding-top: 20px;
+  font-family: "Jost", sans-serif;
+  color: #112B3C;
+}
+.category .container .category-wrapper .category-title h1 {
+  font-size: 30px;
+  font-weight: 500;
 }/*# sourceMappingURL=main.css.map */
