--- a/assets/style/sass/main.scss
+++ b/assets/style/sass/main.scss
@@ -1,6 +1,8 @@
 @use "./base/reset";
 @use "./components/buttons";
+@use "./components/categorie-item";
 @use "./components/dropdown";
 @use "./components/modal-search";
 @use "./components/slider";
 @use "./layout/header";
+@use "./pages/home"
