--- a/assets/style/sass/components/_slider.scss
+++ b/assets/style/sass/components/_slider.scss
@@ -81,3 +81,13 @@
     }
   }
 }
+
+@media only screen and (max-width:768px){
+  .slider{
+    .slider-wrapper{
+      .slider-buttons{
+    display: none;
+  }
+    }
+  }
+}
