responsive modal serach

--- a/assets/style/sass/components/_modal-search.scss
+++ b/assets/style/sass/components/_modal-search.scss
@@ -6,12 +6,12 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 9;
-  display: none;
 
   .modal-search {
-    width: 800px;
+    max-width: 800px;
     border: 1px solid #efefef;
-    min-height: 500px;
+    max-height: 80vh;
+    overflow: auto;
     margin: auto;
     background-color: #eff5f5;
     border-radius: 10px;
@@ -133,6 +133,21 @@
         right: 0;
         font-size: 20px;
         padding: 10px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .modal-overlay {
+    .modal-search {
+      max-width: 400px;
+      .modal-wrapper {
+        .cart {
+          display: grid;
+          grid-template-columns: 1fr;
+          row-gap: 20px;
+        }
       }
     }
   }
