--- a/assets/style/sass/components/_modal-search.scss
+++ b/assets/style/sass/components/_modal-search.scss
@@ -6,7 +6,7 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 9;
-
+  display: none;
   .modal-search {
     max-width: 800px;
     border: 1px solid #efefef;
