--- a/assets/style/sass/components/_card.scss
+++ b/assets/style/sass/components/_card.scss
@@ -4,13 +4,21 @@
   border-radius: 5px;
   .image {
     display: flex;
-    margin-top: 10px;
+    margin-top: 15px;
     justify-content: center;
     border-radius: 5px;
     img {
-      width: 90%;
+      width: 88%;
       border-radius: 5px;
+      transition: .3s ease all;
     }
+    .img2{
+        position: absolute;
+        opacity: 0;
+       visibility: hidden;
+       
+    }
+    
   }
   .card-detail {
     text-align: center;
@@ -56,4 +64,34 @@
     font-family: "Jost", sans-serif;
     font-size: 13px;
   }
+  .card-elements {
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
+    position: absolute;
+    top: 20px;
+    left: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: .3s ease-out all;
+    .element {
+      width: 35px;
+      height: 35px;
+      color: white;
+      background-color: #112b3c;
+      border: none;
+      border-radius: 10px;
+      font-size: 16px;
+    }
+  }
+  &:hover .card-elements {
+    transform: translate(15px);
+    opacity: 1;
+    visibility: visible;
+    
+  }
+  &:hover .img2{
+       opacity: 1;
+       visibility: visible;
+    }
 }
