--- a/assets/style/sass/main.scss
+++ b/assets/style/sass/main.scss
@@ -1,5 +1,6 @@
 @use "./base/reset";
 @use "./components/buttons";
+@use "./components/campania-item";
 @use "./components/card";
 @use "./components/categorie-item";
 @use "./components/dropdown";
